Dropdown menu done with correct alignment

--- a/style.css
+++ b/style.css
@@ -138,6 +138,8 @@ a.mybutton {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.228);
   padding: 10px 15px 10px 15px;
   font-family: "Playfair Display", serif;
+  display: inline-block;
+  position: relative;
 }
 
 .navbutton:hover {
@@ -168,4 +170,21 @@ a.mybutton {
 .tbox p:last-of-type{
   font-size: 0.8rem;
   padding-left: 30px;
+}
+
+.dropdown{
+  display: none;
+  position: absolute;
+  z-index: 1;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.navbutton:hover .dropdown{
+  display: block;
+}
+
+.dropdown .navbutton {
+  width: 140px;
+  background-color: #073b4c;
 }
